--- a/Assets/index.html
+++ b/Assets/index.html
@@ -8,37 +8,32 @@
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <header>
-    <h1 id="main-header"> Anna Jantzen</h1>
+    <h1 id="main-header">Anna Jantzen</h1>
     <nav id="main-sub-header">
-        <button>About me</button>
-        <button>Work</button>
-        <button>Contact me</button>
-        <button>Resume</button>
-    </nav>
-    <h2> </h2>
+        <button><a href="#about-me">About Me</a></button>
+        <button><a href="#work">My Work</a></button>
+        <button><a href="#contact">Contact Me</a></button>
+        <button><a href="#Resume">Resume</a></button>
+      </nav>
 </header>
 <body>
     <main>
-        <section class="button-options">
-            <div id="button-options-header"> 
-                About me
-            </div>
-            <p class="about-me"> I am an aspiring software developer looking to navigate and find my niche in the professional world. I am excited to show everything that I have been able to learn and develope.</p>
+        <section id="about-me">
+           <h1>About me</h1>
+           <img src="selfie.JPG" alt="picture of me"><p class="about-me-text"> I am an aspiring software developer looking to navigate and find my niche in the professional world. I am excited to show everything that I have been able to learn and develope.</p>
         </section>
-        <section class="button-options">
-            <div id="button-options-header">
-                Work
-            </div>
-
+        <section id="work">
+                <h2>Work</h2>
         </section>
-        <section class="button-options">
-            <div id="button-options-header">
-                Contact
-            </div>
-            <p class="contact-me"> 816-527-6665</p>
-            <p class="contact-me"> aejantz2015@gmail.com</p>
+        <section id="contact-me">
+                <h3>Contact me</h3>
+        <ul>
+            <li phone-number> 816-527-6665</li>
+            <li email> aejantz2015@gmail.com</li>
             <!-- why is the link not working -->
-            <p class="contact-me"> <link rel="github" href="https://github.com/aejantz2015"></p>
+            <li git-hub> <link rel="github" href="https://github.com/aejantz2015"></li>
+        </ul>
         </section>
     </main>
+    <footer> Thank you for viewing my porfolio! </footer>
 </body>
