added images and changed the css/html

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -18,22 +18,30 @@
 </header>
 <body>
     <main>
+        <section class="banner">
+            <p>The newest developer for you!</p>
+        </section>
+        <h1>About me</h1>
         <section id="about-me">
-           <h1>About me</h1>
-           <img src="selfie.JPG" alt="picture of me"><p class="about-me-text"> I am an aspiring software developer looking to navigate and find my niche in the professional world. I am excited to show everything that I have been able to learn and develope.</p>
+           <img src="selfie.JPG" alt="picture of me">
+           <p class="about-me-text"> I am an aspiring software developer looking to navigate and find my niche in the professional world. I am excited to show everything that I have been able to learn and develope.</p>
         </section>
+        <h1>Work</h1>
         <section id="work">
-                <h2>Work</h2>
+            <img id="coding-img" src="coding.jpg" alt="picture of screen with code">
+            <img id="computer-img" src="computers.jpg" alt="picture of computers on a desk">
+            <img id="fiberoptic-img" src="fiber-optic.jpg" alt="picture of fiber optic lights">
+            <img id="fingerprint-img" src="fingerprint.jpg" alt="picture of a fingerprint">
+            <img id="motherboard-img" src="motherboard.jpg" alt="picture of a motherboard closeup">
         </section>
+        <h1>Contact me</h1>
         <section id="contact-me">
-                <h3>Contact me</h3>
         <ul>
-            <li phone-number> 816-527-6665</li>
-            <li email> aejantz2015@gmail.com</li>
-            <!-- why is the link not working -->
-            <li git-hub> <link rel="github" href="https://github.com/aejantz2015"></li>
+            <li id="phone-number"> 816-527-6665</li>
+            <li id="email"> <a href="mailto:aejantz2015@gmail.com">aejantz2015@gmail.com</a></li>
+            <li id="git-hub"> <a target="_blank" href="https://github.com/aejantz2015">GitHub</a></li>
         </ul>
         </section>
     </main>
-    <footer> Thank you for viewing my porfolio! </footer>
+    <footer> Thank you for viewing my portfolio! </footer>
 </body>
