--- a/Assets/index.html
+++ b/Assets/index.html
@@ -12,7 +12,7 @@
     <nav id="main-sub-header">
         <button><a href="#about-me">About Me</a></button>
         <button><a href="#work">My Work</a></button>
-        <button><a href="#contact">Contact Me</a></button>
+        <button><a href="#contact-me">Contact Me</a></button>
         <button><a href="#Resume">Resume</a></button>
       </nav>
 </header>
@@ -23,16 +23,20 @@
         </section>
         <h1>About me</h1>
         <section id="about-me">
-           <img src="selfie.JPG" alt="picture of me">
+           <img id="self-picture" src="selfie.JPG" alt="picture of me">
            <p class="about-me-text"> I am an aspiring software developer looking to navigate and find my niche in the professional world. I am excited to show everything that I have been able to learn and develope.</p>
         </section>
         <h1>Work</h1>
         <section id="work">
-            <img id="coding-img" src="coding.jpg" alt="picture of screen with code">
-            <img id="computer-img" src="computers.jpg" alt="picture of computers on a desk">
-            <img id="fiberoptic-img" src="fiber-optic.jpg" alt="picture of fiber optic lights">
-            <img id="fingerprint-img" src="fingerprint.jpg" alt="picture of a fingerprint">
-            <img id="motherboard-img" src="motherboard.jpg" alt="picture of a motherboard closeup">
+            <section id="featured-project">
+            <img class="project-img" id="featured-project-img" src="coding.jpg" alt="picture of screen with code">
+            <a href="https://aejantz2015.github.io/challenge-1/" id="featured-project-deployed">Horiseions Marketing Application</a>
+            <a href="https://github.com/aejantz2015/challenge-1" id="featured-project-github">Horiseions Marketing Application GitHub</a>
+            </section>
+            <img class="project-img" src="computers.jpg" alt="picture of computers on a desk">
+            <img class="project-img" src="fiber-optic.jpg" alt="picture of fiber optic lights">
+            <img class="project-img" src="fingerprint.jpg" alt="picture of a fingerprint">
+            <img class="project-img" src="motherboard.jpg" alt="picture of a motherboard closeup">
         </section>
         <h1>Contact me</h1>
         <section id="contact-me">
