Final update to the HTML and CSS

--- a/Assets/index.html
+++ b/Assets/index.html
@@ -33,10 +33,26 @@
             <a href="https://aejantz2015.github.io/challenge-1/" id="featured-project-deployed">Horiseions Marketing Application</a>
             <a href="https://github.com/aejantz2015/challenge-1" id="featured-project-github">Horiseions Marketing Application GitHub</a>
             </section>
+            
+            <section id="second-project">
             <img class="project-img" src="computers.jpg" alt="picture of computers on a desk">
+            <a id="deploying-soon">Deploying Soon</a>
+            </section>
+
+            <section id="third-project">
             <img class="project-img" src="fiber-optic.jpg" alt="picture of fiber optic lights">
+            <a id="deploying-soon">Deploying Soon</a>
+            </section>
+
+            <section id="fourth-project">
             <img class="project-img" src="fingerprint.jpg" alt="picture of a fingerprint">
+            <a id="deploying-soon">Deploying Soon</a>
+            </section>
+
+            <section id="fifth-project">
             <img class="project-img" src="motherboard.jpg" alt="picture of a motherboard closeup">
+            <a id="deploying-soon">Deploying Soon</a>
+            </section>
         </section>
         <h1>Contact me</h1>
         <section id="contact-me">
