updated the assets folder

--- a/index.html
+++ b/index.html
@@ -23,34 +23,34 @@
         </section>
         <h1>About me</h1>
         <section id="about-me">
-           <img id="self-picture" src="selfie.JPG" alt="picture of me">
+           <img id="self-picture" src="./Assets/images/selfie.JPG" alt="picture of me">
            <p class="about-me-text"> I am an aspiring software developer looking to navigate and find my niche in the professional world. I am excited to show everything that I have been able to learn and develope.</p>
         </section>
         <h1>Work</h1>
         <section id="work">
             <section id="featured-project">
-            <img class="project-img" id="featured-project-img" src="coding.jpg" alt="picture of screen with code">
+            <img class="project-img" id="featured-project-img" src="./Assets/images/coding.jpg" alt="picture of screen with code">
             <a href="https://aejantz2015.github.io/challenge-1/" id="featured-project-deployed">Horiseions Marketing Application</a>
             <a href="https://github.com/aejantz2015/challenge-1" id="featured-project-github">Horiseions Marketing Application GitHub</a>
             </section>
             
             <section id="second-project">
-            <img class="project-img" src="computers.jpg" alt="picture of computers on a desk">
+            <img class="project-img" src="./Assets/images/computers.jpg" alt="picture of computers on a desk">
             <a id="deploying-soon">Deploying Soon</a>
             </section>
 
             <section id="third-project">
-            <img class="project-img" src="fiber-optic.jpg" alt="picture of fiber optic lights">
+            <img class="project-img" src="./Assets/images/fiber-optic.jpg" alt="picture of fiber optic lights">
             <a id="deploying-soon">Deploying Soon</a>
             </section>
 
             <section id="fourth-project">
-            <img class="project-img" src="fingerprint.jpg" alt="picture of a fingerprint">
+            <img class="project-img" src="./Assets/images/fingerprint.jpg" alt="picture of a fingerprint">
             <a id="deploying-soon">Deploying Soon</a>
             </section>
 
             <section id="fifth-project">
-            <img class="project-img" src="motherboard.jpg" alt="picture of a motherboard closeup">
+            <img class="project-img" src="./Assets/images/motherboard.jpg" alt="picture of a motherboard closeup">
             <a id="deploying-soon">Deploying Soon</a>
             </section>
         </section>
