worked on fixing my CSS link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Anna Jantzen Professional Portfolio</title>
     <link rel="stylesheet" href="/Assets/reset.css">
-    <link rel="stylesheet" href="/Assets/style.css">
+    <link rel="stylesheet" href="./Assets/style.css">
 </head>
 <header>
     <h1 id="main-header">Anna Jantzen</h1>
